数据库地址
修改本地数据库

--- a/src/resources/jdbc.properties
+++ b/src/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://rm-m5e67pb2vy0768920.mysql.rds.aliyuncs.com:3306/reptile?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://127.0.0.1:3306/reptile?useUnicode=true&characterEncoding=UTF-8
 username=cisproot
 password=Sinoway999
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
